tests/specs/check/unknown_builtin_node_module/check.out
Check (tsc [WILDLINE])
TS2307 [ERROR]: Cannot find module 'node:unknown' or its corresponding type declarations.
import * as test3 from "node:unknown";
                       ~~~~~~~~~~~~~~
    at file://[WILDCARD]/main.ts:3:24

error: Type checking failed.
